# 100-0-LAB-api

./: .env.example  .gitignore  Dockerfile  README.md  SPEC.md  alembic.ini  pyproject.toml  seed.py  settings.py
alembic/: env.py
alembic/versions/: 38c06888a0c5_add_video_embedding.py  57fd398bb7c1_add_vote_tag_case_status.py  61fc66fde773_init_men_in_blackbox.py  a1b2c3d4e5f6_add_lat_lng_to_video.py  c4798316aeb9_add_actual_ratio_resolution_note_to_.py  d9ceb9d1df2a_add_role_submission_payout_pipeline.py  e96f05a8cae1_add_comment.py
app/: dependencies.py  main.py
app/api/v1/: api.py
app/api/v1/endpoints/: auth.py  case_status.py  comment.py  submission.py  tag.py  user.py  video.py  vote.py
app/core/: config.py  security.py  setting.py
app/db/: mib.db  session.py
app/models/: __init__.py  admin_review.py  audit_log.py  case_status.py  comment.py  content_agreement.py  payout.py  payout_account.py  tag.py  token.py  user.py  video.py  video_embedding.py  video_submission.py  vote.py
app/schemas/: auth.py  case_status.py  comment.py  search.py  submission.py  tag.py  user.py  video.py  vote.py
app/services/: auth_service.py  case_status_service.py  comment_service.py  email_service.py  embedding_service.py  geocoding_service.py  r2_service.py  submission_service.py  tag_service.py  user_service.py  video_service.py  vote_service.py
